--- a/src/vigilo/themes/templates/vigiboard/vigiboard_event_table.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_event_table.html
@@ -52,7 +52,7 @@
 
 	<tbody>
 		<py:for each="(event,class_tr,class_td_severity,class_td_date,img_fleche,statu,plugin) in events[1:]">
-		<tr py:attrs="class_tr" py:with="cause=event.cause.first()">
+		<tr py:attrs="class_tr" py:with="cause=event.cause">
 			<td style="padding: 3px;" py:attrs="class_td_severity">
 			    <a href="#${event.idcorrevent}" class="Details_Link"><img src="${tg.url(img_fleche['src'])}" style="width:20px" alt="Details" title="Event details" /></a>
 		    </td>
@@ -190,13 +190,13 @@ There are no events.
                     link: 'cancel',
                     url: '${tg.url("/history_dialog")}',
                     onSuccess: function (details, raw) {
-                        $('DetailsDialog_initial_state').set('text', details.initial_state);
-                        $('DetailsDialog_current_state').set('text', details.current_state);
-                        $('DetailsDialog_peak_state').set('text', details.peak_state);
-                        $('DetailsDialog_detailed_event').set('href', "${tg.url('/event/')}" + details.idcorrevent);
-                        $('DetailsDialog_detailed_host').set('href', "${tg.url('/host_service/')}" + details.host + "/" + details.service);
+                        $$('DetailsDialog_initial_state').set('text', details.initial_state);
+                        $$('DetailsDialog_current_state').set('text', details.current_state);
+                        $$('DetailsDialog_peak_state').set('text', details.peak_state);
+                        $$('DetailsDialog_detailed_event').set('href', "${tg.url('/event/')}" + details.idcorrevent);
+                        $$('DetailsDialog_detailed_host').set('href', "${tg.url('/host_service/')}" + details.host + "/" + details.service);
                         <py:for each="edname, edit in tg.config['vigiboard_links.eventdetails'].iteritems()">
-                        $('DetailsDialog_${edname}').set('href', details.eventdetails['${edname}']);
+                        $$('DetailsDialog_${edname}').set('href', details.eventdetails['${edname}']);
                         </py:for>
                         window.details_dialog.options.parent = item;
                         window.details_dialog.open.bind(window.details_dialog)();
@@ -208,14 +208,14 @@ There are no events.
     }); // Fin domready.
 
 	function vigiboard_edit_eventdialog(idd) {
-		$('edit_event_form_trouble_ticket').set('text', '');
-		$('edit_event_form_ack').set('selectedindex', 0);
-		$('edit_event_form_id').set('value', idd);
+		$$('edit_event_form_trouble_ticket').set('text', '');
+		$$('edit_event_form_ack').set('selectedindex', 0);
+		$$('edit_event_form_id').set('value', idd);
 		window.edit_dialog.open.bind(window.edit_dialog)();
 	}
 
 	function vigiboard_checkall() {
-	    var val = $('vigiboard_checkall_checkbox').get('checked');
+	    var val = $$('vigiboard_checkall_checkbox').get('checked');
 	    $$$$('.Edit_EventsCheckBox').each(function (el) { el.set('checked', val); });
 	}
 </script>
