Ajout de la demande de collecte dans VigiCore. La page utilise un auto-compléteur pour faciliter la saisie. Légères corrections dans les templates.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1506 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigicore/profile.html
+++ b/src/vigilo/themes/templates/vigicore/profile.html
@@ -12,27 +12,23 @@
 </head>
 
 <body>
-<div id="profileform">
-<form action="${tg.url('/profile/update')}" method="post" class="niceform" style="width: 350px">
-    <fieldset py:if="not settings.get('USE_KERBEROS', False)">
-        <legend>Change password</legend>
+<py:if test="not settings.get('USE_KERBEROS', False)">
+<div id="loginform">
+<form action="${tg.url('/profile/update')}" method="post" class="loginfields">
+    <h2><span>Change password</span></h2>
 
-        <div class="formbody">
-            <label for="old_password">Old password:</label>
-            <input type="password" id="old_password" name="old_password" class="text" />
+    <label for="old_password">Old password:</label>
+    <input type="password" id="old_password" name="old_password" class="text"></input><br/>
 
-            <label for="new_password">New password:</label>
-            <input type="password" id="new_password" name="new_password" class="text" />
+    <label for="new_password">New password:</label>
+    <input type="password" id="new_password" name="new_password" class="text"></input><br/>
 
-            <label for="new_password2">Confirm new password:</label>
-            <input type="password" id="new_password2" name="new_password2" class="text" />
-        </div>
+    <label for="new_password2">Confirmation:</label>
+    <input type="password" id="new_password2" name="new_password2" class="text"></input><br/>
 
-        <div class="formfooter">
-            <input type="submit" value="${l_('Apply')}" />
-        </div>
-    </fieldset>
+    <input type="submit" id="submit" value="${l_('Apply')}" />
 </form>
 </div>
+</py:if>
 </body>
 </html>
