--- a/src/vigilo/themes/templates/common/login.html
+++ b/src/vigilo/themes/templates/common/login.html
@@ -17,7 +17,7 @@
     <h2><span>Login</span></h2>
     <label for="login">Username:</label><input type="text" id="login" name="login" class="text"></input><br/>
     <label for="password">Password:</label><input type="password" id="password" name="password" class="text"></input>
-    <input type="submit" id="submit" value="Login" />
+    <input type="submit" id="submit" value="${l_('Login')}" />
 </form>
 </div>
 
