--- a/src/vigilo/themes/templates/vigicore/master.html
+++ b/src/vigilo/themes/templates/vigicore/master.html
@@ -18,11 +18,12 @@
   ${header()}
   <ul id="mainmenu">
     <li class="first"><a href="${tg.url('/')}" class="${('', 'active')[defined('page') and page==page=='index']}">Welcome</a></li>
-    <span py:if="tg.auth_stack_enabled" py:strip="True">
-        <li py:if="not request.identity" id="loginbtn" class="loginlogout"><a href="${tg.url('/login')}">Login</a></li>
+    <span>
+        <li py:if="not request.identity" id="loginbtn" class="loginlogout ${('', 'active')[defined('page') and page==page=='login']}"><a href="${tg.url('/login')}">Login</a></li>
         <li py:if="request.identity" id="loginbtn" class="loginlogout"><a href="${tg.url('/logout_handler')}">Logout</a></li>
-        <li py:if="request.identity" id="adminbtn" class="loginlogout"><a href="${tg.url('/admin')}">Admin</a></li>
-        <li py:if="request.identity" id="profilebtn" class="loginlogout"><a href="${tg.url('/profile')}">Profile</a></li>
+        <li py:if="request.identity" id="adminbtn" class="${('', 'active')[defined('page') and page==page=='admin']}"><a href="${tg.url('/admin')}">Admin</a></li>
+        <li py:if="request.identity" id="profilebtn" class="${('', 'active')[defined('page') and page==page=='profile']}"><a href="${tg.url('/profile')}">Profile</a></li>
+        <li py:if="request.identity" id="collectbtn" class="${('', 'active')[defined('page') and page==page=='collect']}"><a href="${tg.url('/collect')}">Collect</a></li>
     </span>
   </ul>
   <div id="content">
