VigiCore: Création d'un contrôleur séparé pour l'autocomplétion des hôtes/services (permettra de centraliser les droits sur les données). Mise à jour des autres contrôleurs et des thèmes en conséquence. Déplacement des styles de l'auto-compléteur vers les thèmes (fichiers communs), pour pouvoir les partager avec les autres applis.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1550 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigicore/collect.html
+++ b/src/vigilo/themes/templates/vigicore/collect.html
@@ -37,7 +37,7 @@
     window.addEvent('domready', function (){
         window.host_cmpl = new Autocompleter.Request.VigiloJSON(
             'host',
-            '${tg.url("/collect/autocomplete_host")}',
+            '${tg.url("/autocomplete/host")}',
             {
                 minLength: 3,
                 selectMode: 'type-ahead',
@@ -52,7 +52,7 @@
 
         window.service_cmpl = new Autocompleter.Request.VigiloJSON(
             'service',
-            '${tg.url("/collect/autocomplete_service")}',
+            '${tg.url("/autocomplete/service")}',
             {
                 minLength: 3,
                 selectMode: 'type-ahead',
