--- a/src/vigilo/themes/templates/vigicore/downtime.html
+++ b/src/vigilo/themes/templates/vigicore/downtime.html
@@ -92,7 +92,7 @@ ${table()}
     window.addEvent('domready', function (){
         window.host_cmpl = new Autocompleter.Request.VigiloJSON(
             'host',
-            '${tg.url("/downtime/autocomplete_host")}',
+            '${tg.url("/autocomplete/host")}',
             {
                 minLength: 3,
                 selectMode: 'type-ahead',
@@ -107,7 +107,7 @@ ${table()}
 
         window.service_cmpl = new Autocompleter.Request.VigiloJSON(
             'service',
-            '${tg.url("/downtime/autocomplete_service")}',
+            '${tg.url("/autocomplete/service")}',
             {
                 minLength: 3,
                 selectMode: 'type-ahead',
