Améliorations dans le contrôleur de collecte: - si l'utilisateur a les permissions sur un hôte, alors il a automatiquement accès à tous le services de cet hôte ; - si l'utilisateur a accès à un service sur un hôte, il ne peut ajouter de demande de collecte QUE sur ce service de l'hôte. Mise à jour du template associé pour réafficher les données de la demande de collecte après traitement. Mise à jour du modèle pour permettre l'ajout des Services de Haut Niveau aux groupes de services.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1555 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigicore/collect.html
+++ b/src/vigilo/themes/templates/vigicore/collect.html
@@ -24,10 +24,10 @@
     <h2><span>Force collect</span></h2>
 
     <label for="host">Host:</label>
-    <input type="text" id="host" name="host" class="text"></input><br/>
+    <input type="text" id="host" name="host" class="text" value="${hostname}"></input><br/>
 
     <label for="service">Service:</label>
-    <input type="text" id="service" name="service" class="text"></input><br/>
+    <input type="text" id="service" name="service" class="text" value="${servicename}"></input><br/>
 
     <input type="submit" id="submit" value="${l_('Collect!')}" />
 </form>
@@ -61,6 +61,9 @@
                 postVar: 'service',
             }
         );
+        var val = $$('host').get('value');
+        if (val != '')
+            window.service_cmpl.options.postData['host'] = val;
     });
 </script>
 </body>
