Mise à jour de mootools dans VigiBoard (ajout Chain.Wait & Log dans mootools-more). Correction de l'effet de "flash" dans le template et mise à jour des styles CSS en conséquence.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1568 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -78,7 +78,7 @@
 </table>
 
 <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
-<div py:if="flash" py:content="XML(flash)" />
+<div py:strip="True" py:if="flash" py:content="XML(flash)" />
 </py:with>
 
 <div style="display: none">
@@ -98,8 +98,7 @@ ${tmpl_context.search_form()}
     window.addEvent('domready', function (){
         var flash = $('flash');
         if (flash) {
-            var fx = new Fx.Tween(flash, {'link': 'chain'});
-            fx.fade('in').wait(5000).fade('out');
+            flash.fade('in').pauseFx(5000).fade('out');
         }
 
         /**
